--- a/index.html
+++ b/index.html
@@ -1,13 +1,268 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Научиться учиться</title>
+    <link href="./pages/index.css" rel="stylesheet">
+  </head>
+  <body class="page">
+    <header class="header">
+        <div class="logo logo_place_header">
+          <img src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум чёрного цвета">
+        </div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <h2 class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+          <a class="link header__link" href="#">Узнать &#8594;</a>
+        </h2>
+        <div class="header__main-illustration"></div>
+        <div class="header__square-pic rotation"></div>
+    </header>
+    <main class="content">
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+              Мы готовимся к экзаменам и учим билеты.
+              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+              Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод:</span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+              Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="techniques">
+        <h3 class="section-title">Техники обучения</h3>
+        <h4 class="section-subtitle">Пять практик от Барбары Оакли</h4>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="фотография книги в руках">
+            <p class="cards__title">Два вида внимания</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="фотография греческой статуи">
+            <p class="cards__title">Recall</p>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="фотография атриума">
+            <p class="cards__title">Интерливинг</p>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="фотография одинокого человека">
+            <p class="cards__title">Вопросы</p>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="фотография стопки книг на ладони">
+            <p class="cards__title">Иллюзия компетентности</p>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика.
+              Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно,что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику.
+              И тогда Барбара придумала свой подход к точным наукам.
+              Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+              кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a class="link feynman__link" href="#">Подробнее &#8594;</a>
+      </section>
+      <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="table">
+          <div class="table__cell">
+            <p class="table__heading">86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">2.1 миллиарда</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">1000 терабайт</p>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">420 миллионов</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">17–20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <p class="table__heading">1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
+      </section>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a class="link khan__buy-link" href="#">Купить книгу &#8594;</a>
+          </div>
+        </div>
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table_theme_dark">
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">1</p>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">2</p>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">3</p>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">4</p>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">5</p>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">6</p>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">7</p>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">8</p>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">9</p>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <p class="table__heading_theme_dark">10</p>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <div class="kaufman__triangle rotation">
+          <img src="./images/kaufman-triangle.svg" alt="изображение треугольника">
+        </div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <nav class="resources__logo-zone">
+          <div class="resources__logo">
+            <a class="link resources__link" href="#">
+              <img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas">
+            </a>
+          </div>
+          <div class="resources__logo">
+            <a class="link resources__link" href="#">
+              <img src="./images/logo/resources-n1.svg" alt="логотип N+1">
+            </a>
+          </div>
+          <div class="resources__logo">
+            <a class="link resources__link" href="#">
+              <img src="./images/logo/resources-strelka.svg" alt="логотип Strelka">
+            </a>
+          </div>
+          <div class="resources__logo">
+            <a class="link resources__link" href="#">
+              <img src="./images/logo/resources-polka.svg" alt="логотип Полка">
+            </a>
+          </div>
+        </nav>
+      </section>
+    </main>
+    <div class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&#169; Виктор Абанькин</p>
+        </div>
+        <div class="footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <nav class="footer__column-links">
+            <a class="link footer__column-link" href="#">Главная</a>
+            <a class="link footer__column-link" href="#">Концепция</a>
+            <a class="link footer__column-link" href="#">Наставники</a>
+          </nav>
+        </div>
+        <div class="footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <nav class="footer__column-links">
+            <a class="link footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube">&#160;YouTube
+            </a>
+            <a class="link footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">&#160;ВКонтакте
+            </a>
+            <a class="link footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok">&#160;TikTok
+            </a>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
