Исправлены ошибки и добавлены шрифты

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
+    <link href="./fonts/fonts.css" rel="stylesheet">
     <link href="./pages/index.css" rel="stylesheet">
   </head>
   <body class="page">
@@ -42,32 +43,32 @@
         </div>
       </section>
       <section class="techniques">
-        <h3 class="section-title">Техники обучения</h3>
-        <h4 class="section-subtitle">Пять практик от Барбары Оакли</h4>
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <div class="cards">
           <div class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="фотография книги в руках">
-            <p class="cards__title">Два вида внимания</p>
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="фотография греческой статуи">
-            <p class="cards__title">Recall</p>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="фотография атриума">
-            <p class="cards__title">Интерливинг</p>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="фотография одинокого человека">
-            <p class="cards__title">Вопросы</p>
+            <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="фотография стопки книг на ладони">
-            <p class="cards__title">Иллюзия компетентности</p>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
         </div>
@@ -106,37 +107,37 @@
         <h3 class="section-subtitle">Про учёбу и мозг</h3>
         <div class="table">
           <div class="table__cell">
-            <p class="table__heading">86 миллиардов</p>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">2.1 миллиарда</p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">1000 терабайт</p>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">500 триллионов</p>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">420 миллионов</p>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">17–20 лет</p>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">1885 год</p>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">1889 год</p>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
@@ -161,95 +162,85 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div class="table_theme_dark">
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">1</p>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">2</p>
-            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">3</p>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">4</p>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">5</p>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">6</p>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">7</p>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">8</p>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">9</p>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <div class="table_cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <p class="table__heading_theme_dark">10</p>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle rotation">
-          <img src="./images/kaufman-triangle.svg" alt="изображение треугольника">
-        </div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-        <nav class="resources__logo-zone">
-          <div class="resources__logo">
-            <a class="link resources__link" href="#">
-              <img src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas">
-            </a>
-          </div>
-          <div class="resources__logo">
-            <a class="link resources__link" href="#">
-              <img src="./images/logo/resources-n1.svg" alt="логотип N+1">
-            </a>
-          </div>
-          <div class="resources__logo">
-            <a class="link resources__link" href="#">
-              <img src="./images/logo/resources-strelka.svg" alt="логотип Strelka">
-            </a>
-          </div>
-          <div class="resources__logo">
-            <a class="link resources__link" href="#">
-              <img src="./images/logo/resources-polka.svg" alt="логотип Полка">
-            </a>
-          </div>
-        </nav>
+        <div class="resources__logo-zone">
+          <a class="link resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип Arzamas">
+          </a>
+          <a class="link resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип N+1">
+          </a>
+          <a class="link resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип Strelka">
+          </a>
+          <a class="link resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип Полка">
+          </a>
+        </div>
       </section>
     </main>
     <div class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&#169; Виктор Абанькин</p>
         </div>
-        <div class="footer__column_content_info">
-          <p class="footer__column-heading">О Практикуме</p>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
             <a class="link footer__column-link" href="#">Главная</a>
             <a class="link footer__column-link" href="#">Концепция</a>
             <a class="link footer__column-link" href="#">Наставники</a>
           </nav>
         </div>
-        <div class="footer__column_content_social">
-          <p class="footer__column-heading">Соцсети</p>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
             <a class="link footer__column-link" href="#">
               <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube">&#160;YouTube
